--- a/Aula3/style.css
+++ b/Aula3/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0%;
-    padding: 0px;
+    padding: 0%;
     box-sizing: border-box;
 }
 
@@ -14,11 +14,11 @@
 }
 
 .quadradinho {
-    width: 100px;
-    height: 50px;
+    width: 100%;
+    height: 50%;
     position: fixed;
-    top: 10px;
-    left: 10px;
+    top: 1%;
+    margin-left: 1%;
 }
 
 .pai-flex {
